Opened 18 years ago

Closed 17 years ago

#562 closed bug (fixed)

[Gobe Productive] doesnt load splash screen correctly

Reported by: johndrinkwater Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

Gobe opens a small bordered window in the centre of the screen, yet no controls are visible. Doesn't crash, just stays there waiting for vulcan.

Attachments (3)

screen2.png (21.7 KB ) - added by johndrinkwater 18 years ago.
Gobe splash
gobe.jpg (66.7 KB ) - added by kvdman 17 years ago.
updatedsplash.jpg (91.4 KB ) - added by kvdman 17 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by diver, 18 years ago

Cc: diver added

by johndrinkwater, 18 years ago

Attachment: screen2.png added

Gobe splash

comment:2 by darkwyrm, 18 years ago

As of hrev17329, this still occurs. I think it *might* be a problem with the ELF loader - with libprefs v1.25 I got the same problems as described and in the Terminal there was a message about an invalid ELF format.

by kvdman, 17 years ago

Attachment: gobe.jpg added

comment:3 by kvdman, 17 years ago

Platform: All

I have this problem as well with libprefs.

Found sources here:

http://bryan.varnernet.com/software/beos/libprefs/

Can download libprefs1.2.5 here:

http://files.bebits.com/pub/mirror/beware/libraries/

Old libprefs info here:

http://www.beatjapan.org/mirror/www.be.com/beware/Libraries/libprefs.html

I've tried libprefs1.2.5 and 1.2.3 and get the elf loader errors ('incorrect elf header').

The splash screen loads but stops on loading preferences (doesn't crash). How do you get a backtrace if the program doesn't crash??

I've attached a screenshot using gdb and the 'start' command. Don't know if this helps.

Funny, I'm using my copy of GobeProductive from Zeta that I bought, and you'd figure the library would be on Zeta's disk, but it's not. I've read that Gobe uses the library to load the preferences, so how does it work on Zeta without the library?

thx

by kvdman, 17 years ago

Attachment: updatedsplash.jpg added

comment:4 by axeld, 17 years ago

Description: modified (diff)

The libprefs of that archive are in PEF format, it's an ancient R3 Intel executable :-)

comment:5 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev22724. libprefs is built into Gobe Productive and looped endlessly, since the private _klock_node_() function was not implemented in Haiku.

Note: See TracTickets for help on using tickets.