libprefs.so uses the private _klock_node_() syscall, and even loops until it returns success - since this stub always returned failure, this prevented all apps using that library (like Gobe Productive) from running. It now calls the Haiku equivalent _kern_lock_node(), and Gobe now runs fine! This closes bug #562.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22724 a95241bf-73f2-0310-859d-f6bbb57e9c96